# GA-Hub

./: .gitignore  README.md  check.bat  check.sh  install_webui.bat  install_webui.sh  launch_webui.pyw  pyproject.toml  start.bat  start.command  start_hidden.vbs
.github/workflows/: release.yml
.trellis/spec/backend/: quality-guidelines.md
assets/: genericagent_admin.ico.bak  genericagent_admin.ico.pre_biground.bak  genericagent_admin.ico.pre_circleish.bak  genericagent_admin.ico.pre_perfect_circle.bak  genericagent_admin.ico.pre_rounded.bak  genericagent_admin.ico.pre_superellipse.bak
docs/: tui-v3-feature-gap.md
server/: __init__.py  _paths.py  main.py  run.py  schemas.py
server/routes/: agent.py  autonomous.py  conductor.py  conversations.py  events.py  feishu.py  goalhive.py  logs.py  memory.py  mykey.py  notify.py  tasks.py  upload.py  wechat.py
server/services/: agent_service.py  autonomous_scheduler.py  conductor_service.py  email_service.py  event_bus.py  feishu_service.py  ga_external_worker.py  ga_subprocess_patch.py  goalhive_service.py  notify_service.py  task_scheduler.py  wechat_service.py  wx_bot_client.py
tests/: test_backend_api_smoke.py  test_event_bus.py  test_ga_external_worker.py  test_paths_python.py  test_render_dict.py  test_rewind_turns.py  test_wechat_service.py
webui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
webui/src/: App.tsx  main.tsx
webui/src/api/: client.ts  types.ts
webui/src/components/: CommandPalette.tsx  DialogHost.tsx  ErrorBoundary.tsx  ImagePasteInput.tsx  (+8 more)
(+31 files in other folders)
