[project]
name = "generic-agent-admin"
version = "0.2.8"
description = "Independent web admin console for GenericAgent (sibling project; never modifies the GA repo)."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "websockets>=12.0",
    "pycryptodome>=3.19",
    "qrcode>=7.4",
    "Pillow>=10.0",
    "requests[socks]>=2.28",
    "pywebview>=4.0",
    'pystray>=0.19; platform_system == "Windows"',
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server", "server.routes", "server.services"]
